Fix site search button collapsing in IE11.

--- a/sources/stylesheets/components/_site-search.scss
+++ b/sources/stylesheets/components/_site-search.scss
@@ -3,6 +3,10 @@
 // =============================================================================
 .site-search-btn {
   @include button;
+  width: 28px;
+  height: 31px;
+  min-width: 28px;
+  min-height: 31px;
   padding: 6px 5px 4px;
   vertical-align: top;
 
